--- a/index.html
+++ b/index.html
@@ -10,10 +10,10 @@
         <img src="" alt="">
         <nav>
             <ul>
-                <li></li>
-                <li></li>
-                <li></li>
-                <li></li>
+                <li>Home</li>
+                <li>Service</li>
+                <li>About</li>
+                <li>Contact</li>
             </ul>
         </nav>
         <button></button>
